# Lpr

./: CMakeLists.txt  README.md
models/: license-plate-recognition-barrier-0001.xml  license_plate_detection_lpd_yunet_2022may.onnx
src/: lpr_detect.hpp  lpr_inter.hpp  main.cpp  shared_tensor_allocator.hpp
